--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <charm-plugin></charm-plugin>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
